--- a/PresentacionWebForms/Content/Site.css
+++ b/PresentacionWebForms/Content/Site.css
@@ -1,4 +1,4 @@
-﻿.container{
+﻿.container {
     padding-left: 0px;
 }
 
@@ -22,13 +22,19 @@
     }
 }
 
-  .container {
-  margin-left: 0px;
+.container {
+    margin-left: 0px;
 }
 
-  .content-wrapper,
+.content-wrapper,
 .right-side {
-  min-height: 100%;
-  background-color: #ffffff;
-  z-index: 800;
+    min-height: 100%;
+    background-color: #ffffff;
+    z-index: 800;
+}
+
+.table-responsive {
+    width: 100%;
+    height: 600px;
+    overflow: scroll;
 }
