--- a/PresentacionWebForms/Site.Master
+++ b/PresentacionWebForms/Site.Master
@@ -105,7 +105,11 @@
                         <li class="treeview">
                             <a href="#">
                                 <i class="fa fa-edit"></i><span>Evaluaciones</span>
+                                <i class="fa fa-angle-left pull-right"></i>
                             </a>
+                            <ul class="treeview-menu">
+                                <li><a href="../../CenfotecSite/Questions/List.aspx"><i class="fa fa-circle-o"></i>Preguntas</a></li>
+                            </ul>
                         </li>
                         <li class="treeview">
                             <a href="#">
