kpi ventas logic

--- a/PresentacionWebForms/Site.Master
+++ b/PresentacionWebForms/Site.Master
@@ -118,8 +118,8 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
-                                <li><a href="#"><i class="fa fa-circle-o"></i>Crear KPI de ventas</a></li>
-                                <li><a href="#"><i class="fa fa-circle-o"></i>Crear KPI de prospectos</a></li>
+                                <li><a href="../../CenfotecSite/Kpi/kpiVentas.aspx"><i class="fa fa-circle-o"></i>Crear KPI de ventas</a></li>
+                                <li><a href="../../CenfotecSite/Kpi/kpiProspectos.aspx""><i class="fa fa-circle-o"></i>Crear KPI de prospectos</a></li>
                                 <li><a href="../../CenfotecSite/Kpi/kpiProductos.aspx"><i class="fa fa-circle-o"></i>Crear KPI de productos</a></li>
                                 <li><a href="#"><i class="fa fa-circle-o"></i>Crear KPI ganancias por ventas</a></li>
                                 <li><a href="#"><i class="fa fa-circle-o"></i>Crear KPI de evaluaciones</a></li>
