--- a/PresentacionWebForms/Site.Master
+++ b/PresentacionWebForms/Site.Master
@@ -110,6 +110,9 @@
                                 <i class="fa fa-angle-left pull-right"></i>
                             </a>
                             <ul class="treeview-menu">
+                                <li><a href="../../CenfotecSite/Evaluations/List.aspx"><i class="fa fa-circle-o"></i>Plantillas</a></li>
+                            </ul>
+                            <ul class="treeview-menu">
                                 <li><a href="../../CenfotecSite/Questions/List.aspx"><i class="fa fa-circle-o"></i>Preguntas</a></li>
                             </ul>
                         </li>
