--- a/PresentacionWebForms/Site.Master
+++ b/PresentacionWebForms/Site.Master
@@ -124,7 +124,7 @@
                             </a>
                             <ul class="treeview-menu">
                                 <li><a href="#"><i class="fa fa-circle-o"></i>Crear KPI de ventas</a></li>
-                                <li><a href="#"><i class="fa fa-circle-o"></i>Crear KPI de prospectos</a></li>
+                                <li><a href="../../CenfotecSite/Kpi/kpiProspectos.aspx"><i class="fa fa-circle-o"></i>Crear KPI de prospectos</a></li>
                                 <li><a href="../../CenfotecSite/Kpi/kpiProductos.aspx"><i class="fa fa-circle-o"></i>Crear KPI de productos</a></li>
                                 <li><a href="#"><i class="fa fa-circle-o"></i>Crear KPI ganancias por ventas</a></li>
                                 <li><a href="#"><i class="fa fa-circle-o"></i>Crear KPI de evaluaciones</a></li>
