--- a/PresentacionWebForms/Content/Site.css
+++ b/PresentacionWebForms/Content/Site.css
@@ -72,3 +72,9 @@
     display:none !important;
 }
 
+#loginPage{
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(163,33,105,1)), color-stop(100%,rgba(82,47,131,1)));
+}
+.login-title{
+    margin:  200px auto;
+}
